2001-02-25  Ulrich Drepper  <drepper@redhat.com>

	* locale.alias: Don't use nb_NO but define aliases for it.

2001-01-26  Ulrich Drepper  <drepper@redhat.com>

	* loadmsgcat.c: Include <locale.h> for _LIBC.

2001-03-09  Bruno Haible  <haible@clisp.cons.org>

	* dcigettext.c (transmem_block_t): Change to unsigned char, to avoid
	compiler warning.
	(_nl_find_msg): Add casts to avoid compiler warnings.

2001-03-09  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (DISTFILES.common): Remove ChangeLog.
	(DISTFILES.obsolete): New variable.
	(install-data): Install ChangeLog.inst as ChangeLog. Remove the files
	listed in DISTFILES.obsolete.
	(uninstall): Simplify.
	(distclean): Remove ChangeLog.inst.
	(dist): Mention ChangeLog explicitly.

2001-03-04  Bruno Haible  <haible@clisp.cons.org>
 
	* dcigettext.c (ISSLASH, HAS_DEVICE, IS_ABSOLUTE_PATH,
	IS_PATH_WITH_DIR): New macros.
	(DCIGETTEXT): Use IS_ABSOLUTE_PATH and IS_PATH_WITH_DIR. Increment
	path_max proportionally.
	* loadinfo.h (PATH_SEPARATOR): New macro.
	* l10nflist.c (_nl_make_l10nflist): Use PATH_SEPARATOR instead of ':'.
	* localealias.c (_nl_expand_alias): Likewise.
	* libgnuintl.h (gettext) [DJGPP]: Define as a macro as well.

2001-03-06  Bruno Haible  <haible@clisp.cons.org>

	* libgnuintl.h (LC_MESSAGES): Don't define on Solaris.

2001-02-24  Bruno Haible  <haible@clisp.cons.org>

	* dcigettext.c: Update comment about HAVE_LOCALE_NULL.

2001-02-05  Bruno Haible  <haible@clisp.cons.org>

	* libgnuintl.h (LC_MESSAGES): Provide a default value.

2001-01-30  Bruno Haible  <haible@clisp.cons.org>

	* config.charset: Update for FreeBSD 4.2.

2001-01-21  Bruno Haible  <haible@clisp.cons.org>

	Use libtool.
	* Makefile.in (l): Use INTL_LIBTOOL_SUFFIX_PREFIX instead of l.
	(all-no): When USE_INCLUDED_LIBINTL is 'no' but BUILD_INCLUDED_LIBINTL
	is 'yes', still build libintl.$la because the testsuite needs it.
	(libintl.la): Add $(CPPFLAGS) $(CFLAGS) $(XCFLAGS). Linking via $(CC)
	must use all $(CFLAGS).