@@ -1,3 +1,8 @@
+2001-03-09  Bruno Haible  <haible@clisp.cons.org>
+
+	* config.charset: Update from libiconv-1.6.
+	* localcharset.c: Likewise.
+
 2001-03-04  Bruno Haible  <haible@clisp.cons.org>
 
 	* system.h (ISSLASH, HAS_DEVICE, IS_ABSOLUTE_PATH, IS_PATH_WITH_DIR,
